tempfile/auto_impl/tests/compile-fail/keep_default_for_on_required_method.rs
use auto_impl::auto_impl;


#[auto_impl(&)]
trait Foo {
    #[auto_impl(keep_default_for(&))]
    fn required(&self);
}


fn main() {}
